// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package cat.v1;

import "cat/cat.proto";
import "mojo/core/null.proto";

option go_package = "github.com/liankui/tnr/go/pkg/cat/v1;cat";
option java_multiple_files = true;
option java_outer_classname = "CatsProto";
option java_package = "com.liankui.cat.v1";

message CreateCatRequest {
    cat.Cat cat = 1;
}

message UpdateCatRequest {
    cat.Cat cat = 1;
}

message GetCatRequest {
    string id = 1;
}

message ListCatsRequest {
    int32 page_size = 2000;
    string page_token = 2001;
    int32 skip = 2002;
}

message ListCatsResponse {
    repeated cat.Cat cats = 1;
    int32 total_count = 2000;
    string next_page_token = 2001;
}

message BatchGetCatRequest {
    repeated string ids = 1;
}

message BatchGetCatResponse {
    repeated cat.Cat cats = 1;
}

message DeleteCatRequest {
    string id = 1;
}

service Cats {
    rpc create_cat(CreateCatRequest) returns (cat.Cat);
    rpc update_cat(UpdateCatRequest) returns (cat.Cat);
    rpc get_cat(GetCatRequest) returns (cat.Cat);
    rpc list_cats(ListCatsRequest) returns (ListCatsResponse);
    rpc batch_get_cat(BatchGetCatRequest) returns (BatchGetCatResponse);
    rpc delete_cat(DeleteCatRequest) returns (mojo.core.Null);
}